# streamlit-deploy

./: .gitignore  .prettierrc.toml  README.md  config.toml  pyproject.toml  requirements.txt  snowflake.yml
.github/workflows/: main.yml
src/: snowflake.yml
src/tests/: test_streamlit_app.py
tests/: test_streamlit_app.py
