[project]
name = "streamlit-deploy"
version = "0.1.0"
description = "A Streamlit Hello World project with a simple deployment setup."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35.0"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest"
]

[tool.ruff]
# Enable the pycodestyle (`E`), Pyflakes (`F`), and import sorting (`I`) rules by default
select = ["E", "F", "I"]
# Same line length as previously configured for black
line-length = 88
# Target Python version
target-version = "py38"
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with 4 spaces
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["streamlit_deploy"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.13",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["common", "pages"]
